# pyoframe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTE.md  LICENSE  README.md  Snakefile  conftest.py  diet.lp  facilityPY.lp  fsdf.ilp  giscus.json  index.html  mkdocs.yml  objects.inv  pylintrc  pyproject.toml  pytest.ini  sitemap.xml  test.lp  test.sol  versions.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmarks.yml  black.yml  ci-secure.yml  ci.yml  format.yml  lines_changed_counter.yml  lint.yml  lint_and_format.yml  main.yml  publish_doc.yml  publish_doc_dev.yml  publish_to_pypi.yml  test_doc.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/SUMMARY/: index.html
0.1/contribute/: index.html
0.1/learn/: index.html
0.1/overrides/: main.html
0.1/reference/: index.html
0.1/search/: search_index.json
0.1/why-pyoframe/: index.html  pyoframe-performance.ipynb
0.2/: 404.html  index.html  sitemap.xml
0.2/SUMMARY/: index.html
0.2/contribute/: index.html
0.2/learn/: index.html
0.2/overrides/: home.html
0.2/reference/: index.html
1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.1/: 404.html  index.html  sitemap.xml
1.2/: 404.html  index.html  objects.inv  sitemap.xml
1.3/: 404.html  index.html  sitemap.xml
1.4/: 404.html  index.html  objects.inv  sitemap.xml
1.5/: 404.html  index.html  sitemap.xml
1.6/: 404.html  index.html  sitemap.xml
SUMMARY/: index.html
benchmarks/: .gitignore  Manifest.toml  Project.toml  README.md  Snakefile  benchmarks.csv  collect_benchmarks.py  config.ci.yaml  config.full.yaml  config.test.yaml  config.testing.yaml  config.yaml  facility_jump.jl  facility_pyoframe.py  facility_pyomo.py  facility_pyopti.py  make_table.py  plot.py  plot_results.py  produce_table.jl  pyproject.toml  run.py  run_benchmark.py  test.py  util.py
benchmarks/energy_model/: model.py
benchmarks/energy_model/scripts/: compute_capacity_factors.ipynb  compute_capacity_factors.py.ipynb  process_generator_data.ipynb  process_lines_json.ipynb  process_lines_json.py.ipynb  process_load_data.ipynb  process_load_data.py.ipynb  simplify_network.py  util.py
benchmarks/energy_planning/scripts/: compute_capacity_factors.py.ipynb  process_generator_data.py.ipynb  process_lines_json.py.ipynb  process_load_data.py.ipynb  simplify_network.py  util.py
benchmarks/facility_location/: bm_gurobipy.py  bm_jump.jl  bm_pyoframe.py  bm_pyomo.py  bm_pyoptinterface.py
benchmarks/facility_problem/: README.md  bm_pyoframe.py  bm_pyomo.py  bm_pyoptinterface.py
benchmarks/input_data/energy_planning/final_inputs/: generators.parquet  lines_simplified.parquet  variable_capacity_factors.parquet
benchmarks/maintainability/: README.md  config.yaml  results.csv  run.py
benchmarks/readability/: config.yaml  results_readability.tex  run.py
benchmarks/src/: plot_results.py  run_benchmark.py  utils.py
benchmarks/src/benchmark_utils/: __init__.py  ampl.py  cvxpy.py  gurobipy.py  jump.jl  linopy.py  plot_results.py  pulp.py  pyoframe.py  pyomo.py  pyoptinterface.py  run_benchmark.py
benchmarks/src/create_variable/: bm_cvxpy.py  bm_gurobipy.py  bm_jump.jl  bm_linopy.py  bm_pyoframe.py  bm_pyomo.py  bm_pyoptinterface.py
benchmarks/src/dummy_model/: bm_cvxpy.py  bm_gurobipy.py  bm_jump.jl  bm_linopy.py  bm_pyoframe.py  bm_pyomo.py  bm_pyoptinterface.py
benchmarks/src/energy_planning/: .gitignore  Snakefile  bm_ampl.py  bm_cvxpy.py  bm_gurobipy.py  bm_jump.jl  bm_linopy.py  bm_pyoframe.py  bm_pyomo.py  bm_pyoptinterface.py  build_dataset.smk
benchmarks/src/energy_planning/model_data/: branch_outage_dist_facts.parquet  capex_costs.csv  cost_parameters.csv  generators.parquet  lines_simplified.parquet  variable_capacity_factors.parquet  yearly_limits.parquet
benchmarks/src/energy_planning/raw_data/constants/: map_type_to_vcf_type.csv
benchmarks/src/energy_planning/results/: build_out.parquet  dispatch.parquet  load_unserved.parquet  power_flow.parquet
benchmarks/src/energy_planning/scripts/: A_parse_matpower_case.py  B2_extract_load_data.py  B_extract_generator_data.py  C1_simplify_network.py  C2_compute_power_transfer_dist_facts.py  C3_compute_branch_outage_dist_facts.py  C_extract_line_data.py  D_extract_capex_data.py  E_compute_capacity_factors.py  Z_analyze_results.py  analyze_supply_demand.ipynb  compute_branch_outage_dist_facts.ipynb  compute_branch_outage_dist_facts.py.ipynb  compute_capacity_factors.py.ipynb  compute_power_transfer_dist_facts.ipynb  compute_power_transfer_dist_facts.py.ipynb  process_generator_data.py.ipynb  process_lines_json.py.ipynb  process_load_data.py.ipynb  process_matpower_case.ipynb  process_matpower_case.py.ipynb  simplify_network.py  util.py
benchmarks/src/energy_planning/scripts/tests/: expected_bodfs.csv  expected_ptdfs.csv  test_branch_outage_dist_fact.py  test_compute_power_distribution_factor.py
benchmarks/src/facility_location/: README.md  __init__.py  bm_ampl.py  bm_cvxpy.py  bm_cvxpy_ignore.py  bm_gurobipy.py  bm_jump.jl  bm_pyoframe.py  bm_pyomo.py  bm_pyoptinterface.py  test.py
benchmarks/src/simple_problem/: .gitignore  README.md  Snakefile  bm_ampl.py  bm_cvxpy.py  bm_gurobipy.py  bm_jump.jl  bm_linopy.py  bm_pulp.py  bm_pyoframe.py  bm_pyomo.py  bm_pyoptinterface.py
contribute/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: .nav.yml  SUMMARY.md  index.md  quadratic_expressions.md
examples/: index.html
learn/: index.html
reference/: index.html
scripts/: gen_ref_pages.py  generate_api_reference.py  griffe_extensions.py  test_attr_performance.py
search/: search_index.json
tests/: conftest.py  test_addition.py  test_arithmetic.py  test_constants.py  test_constraint.py  test_constraints.py  test_examples.py  test_expressions.py  test_io.py  test_math.py  test_model.py  test_names.py  test_objective.py  test_operations.py  test_param.py  test_solver.py  test_to_str.py  test_transformations.py  test_variable.py  util.py
why-pyoframe/: index.html
(+847 files in other folders)
