[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoframe"
authors = [{ name = "Bravos Power", email = "dev@bravospower.com" }]
description = "Blazing fast linear program interface"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license="MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
]
dependencies = [
    "polars~=1.0",
    "numpy",
    "pyarrow",
    "pandas",
    "pyoptinterface>=0.4.1,<1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "polars>=1.30.0",                            # Some of the tests rely on the output format of polars exceptions which changed in 1.30.0
    "bumpver",
    "pip-tools",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "gurobipy",
    "highsbox",
    "coverage",
    "ipykernel",
    "pytest-markdown-docs",
    "mkdocs-material==9.*",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-gen-files",
    "mkdocs-section-index",
    "mkdocs-literate-nav",
    "mkdocs-table-reader-plugin",
    "markdown-hide-code>=0.1.1",
    "pyoptinterface[nlp]"
]
highs = ["highsbox"]
ipopt = ["pyoptinterface[nlp]"]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I", "W292", "W291"]

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.run]
include = ["src/pyoframe/*"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--doctest-modules --ignore=scripts --markdown-docs --markdown-docs-syntax=superfences"

[tool.setuptools_scm]
version_file = "src/pyoframe/_version.py"
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://bravos-power.github.io/pyoframe/"
documentation = "https://bravos-power.github.io/pyoframe/"
repository = "https://github.com/Bravos-Power/pyoframe/"
Issues = "https://github.com/Bravos-Power/pyoframe/issues"
