[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoframe-benchmarks"
version = "0.0.0"
dependencies = [
    "snakemake==9.6.0",
    "gdown==5.2.0",             # To download data from Google Drive
    "papermill==2.6.0",         #  To run notebooks
    "altair==5.5.0",            # For plotting in notebooks
    "pyomo==6.9.2",
    "linopy==0.5.5",
    "pyoptinterface==0.4.1",
    "numpy==2.3.1",
    "vl-convert-python==1.8.0", # For saving plots in altair
    "snakeviz==2.2.2",  # For viewing profiling results
    "memray==1.17.2",  # For memory profiling
    "numpy==2.3.1",
]

[tool.setuptools]
package-dir = { "benchmarks" = "src" }
